--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Styles -->
-    <link rel="stylesheet" href="/css/styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <!-- Normalize Css -->
-    <link rel="stylesheet" href="/css/normalize.css">
+    <link rel="stylesheet" href="css/normalize.css">
     <!-- Fonts Awesome -->
-    <link rel="stylesheet" href="/css/all.min.css">
+    <link rel="stylesheet" href="css/all.min.css">
     <!-- Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,7 +21,7 @@
     <!-- Start Header -->
     <div class="header">
         <div class="container">
-            <img class="logo" src="/Images/logo.svg" alt="">
+            <img class="logo" src="../Flooky-project/Images/logo.svg" alt="">
             <div class="links">
                 <span class="icon">
                     <span></span>
@@ -126,7 +126,7 @@
                   <!--End Second col here  -->
                   <div class="col">
                       <div class="image image-colums">
-                          <img src="Images/services.jpg" alt="">
+                          <img src="../Flooky-project/Images/services.jpg" alt="">
                       </div>
                   </div>
             </div>
@@ -143,7 +143,7 @@
             <div class="Portoflio-content">
                 <!-- Fisrt Card -->
             <div class="card">
-                  <img src="/Images/portfolio-1.jpg" alt="">  
+                  <img src="../Flooky-project/Images/portfolio-1.jpg" alt="">  
                   <div class="info">
                       <h3>Project Here</h3>
                       <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
@@ -152,7 +152,7 @@
                 <!-- End Fisrt Card -->
                 <!-- Sec Card -->
             <div class="card">
-                <img src="/Images/portfolio-2.jpg" alt="">  
+                <img src="../Flooky-project/Images/portfolio-2.jpg" alt="">  
                 <div class="info">
                     <h3>Project Here</h3>
                     <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
@@ -161,7 +161,7 @@
                 <!-- End Sec Card -->
                 <!-- Third Card -->
             <div class="card">
-                <img src="/Images/portfolio-3.jpg" alt="">  
+                <img src="../Flooky-project/Images/portfolio-3.jpg" alt="">  
                 <div class="info">
                     <h3>Project Here</h3>
                     <p>My creative ability is very difficult to measure because it can manifest in so many surprising and.</p>
@@ -184,7 +184,7 @@
             <p>Less is more work</p>
             <div class="about-content">
                 <div class="image">
-                    <img src="/Images/about.jpg" alt="">
+                    <img src="../Flooky-project/Images/about.jpg" alt="">
                 </div>
                 <div class="text">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consequuntur rerum dolorem numquam incidunt quam totam laboriosam quia perspiciatis consequatur dolore sit accusantium tenetur labore, similique cum distinctio aspernatur, blanditiis temporibus!</p>
